update debian-ports URL

--- a/community/gsoc/2013/hacklu.mdwn
+++ b/community/gsoc/2013/hacklu.mdwn
@@ -1062,8 +1062,8 @@ In context of [[open_issues/libpthread/t/fix_have_kernel_resources]]:
       package for glibc
     <youpi> hacklu: which deb-src lines do you have?
     <hacklu> and piece of my source_list : deb
-      http://ftp.debian-ports.org/debian unreleased main deb-src
-      http://ftp.debian-ports.org/debian unreleased main
+      http://ftp.ports.debian.org/debian-ports unreleased main deb-src
+      http://ftp.ports.debian.org/debian-ports unreleased main
     <youpi> you also need a deb-src line with the main archive
     <youpi> deb-src http://cdn.debian.net/debian unstable main
     <tschwinge> hacklu: Oh, hmm.  And you did run »apt-get update« before?
