--- a/grub.mdwn
+++ b/grub.mdwn
@@ -161,7 +161,7 @@ supports the multiboot standard, necessary to boot the Hurd.
     <anonymuouss> antrik: I wrote the syslinux mailing list this morning, with
       details about some simple ways to download "ext2fs.static   gnumach.gz
       initrd.gz  and  ld.so.1" from
-      http://ftp.debian-ports.org/debian-cd/hurd-i386/current/ and package them
+      http://ftp.ports.debian.org/debian-ports-cd/hurd-i386/current/ and package them
       to boot with the syslinux "mboot.c32" from iso9660. And showed them the
       proper kernel and module configuration lines from the netinstall's
       "grub.cfg". So I am hoping to get a reponse soon from Peter Alvin or G
