--- a/hurd/dde/guide.mdwn
+++ b/hurd/dde/guide.mdwn
@@ -43,9 +43,9 @@ Prepare apt offline configuration so we can get necessary packages:
 
 	$ cd /mnt/etc/apt
 
-	$ echo "deb http://ftp.debian-ports.org/debian unreleased main" >> sources.list # if you don't have sources.list set up yet on the Hurd system
+	$ echo "deb http://ftp.ports.debian.org/debian-ports unreleased main" >> sources.list # if you don't have sources.list set up yet on the Hurd system
 
-	$ echo "deb-src http://ftp.debian-ports.org/debian unreleased main" >> sources.list
+	$ echo "deb-src http://ftp.ports.debian.org/debian-ports unreleased main" >> sources.list
 
 	$ echo "deb http://ftp.uk.debian.org/debian unstable main" >> sources.list
 
