--- a/hurd/running/debian/patch_submission.mdwn
+++ b/hurd/running/debian/patch_submission.mdwn
@@ -49,7 +49,7 @@ the specified tags for the current user, and *X-Debbugs-CC* so that the
 
 In the bug description, mention that the package fails to build on hurd-i386
 and (if possible) quote the failure.  If possible, point to the failing build
-log from <http://buildd.debian-ports.org/build.php> or elsewhere.
+log from <http://buildd.debian.org/> or elsewhere.
 
 Then, explain the failure (Debian maintainers usually do not know much about
 Hurd-specific failures), and attach the patch.
