--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -1812,7 +1812,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
                 500 http://ftp.de.debian.org/debian/ unstable/main hurd-i386 Packages
                 100 /var/lib/dpkg/status
              2.19-16~3 0
-                500 http://ftp.debian-ports.org/debian/ unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports/ unreleased/main hurd-i386 Packages
         hurd-libs0.3:
           Installiert:           1:0.6.git20151012-1
           Installationskandidat: 1:0.6.git20151012-1
@@ -2479,7 +2479,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
          *** 2.19-22 0
                 100 /var/lib/dpkg/status
              2.19-16~3 0
-                500 http://ftp.debian-ports.org/debian/ unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports/ unreleased/main hurd-i386 Packages
         hurd:
           Installiert:           1:0.6.git20150704-2
           Installationskandidat: 1:0.7.git20160214-2
@@ -2538,7 +2538,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
                 500 http://ftp.de.debian.org/debian unstable/main hurd-i386 Packages
                 100 /var/lib/dpkg/status
              2.19-16~3 500
-                500 http://ftp.debian-ports.org/debian unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports unreleased/main hurd-i386 Packages
         hurd:
           Installiert:           1:0.6.git20150704-2
           Installationskandidat: 1:0.7.git20160214-2
@@ -2597,7 +2597,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
                 500 http://ftp.de.debian.org/debian unstable/main hurd-i386 Packages
                 100 /var/lib/dpkg/status
              2.19-16~3 500
-                500 http://ftp.debian-ports.org/debian unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports unreleased/main hurd-i386 Packages
         hurd:
           Installed: 1:0.6.git20150704-2
           Candidate: 1:0.7.git20160214-2
@@ -2655,7 +2655,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
                 500 http://ftp.de.debian.org/debian unstable/main hurd-i386 Packages
                 100 /var/lib/dpkg/status
              2.19-16~3 500
-                500 http://ftp.debian-ports.org/debian unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports unreleased/main hurd-i386 Packages
         hurd:
           Installiert:           1:0.7.git20160214-2
           Installationskandidat: 1:0.7.git20160214-2
@@ -2716,7 +2716,7 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
                 500 http://ftp.de.debian.org/debian unstable/main hurd-i386 Packages
                 100 /var/lib/dpkg/status
              2.19-16~3 500
-                500 http://ftp.debian-ports.org/debian unreleased/main hurd-i386 Packages
+                500 http://ftp.ports.debian.org/debian-ports unreleased/main hurd-i386 Packages
         hurd:
           Installed: 1:0.6.git20150704-2
           Candidate: 1:0.7.git20160214-2
