--- a/news/2013-05-debian_gnu_hurd_2013.mdwn
+++ b/news/2013-05-debian_gnu_hurd_2013.mdwn
@@ -25,7 +25,7 @@ This is a snapshot of Debian "sid" at the time of the Debian
 official Debian release, but it is an official Debian GNU/Hurd port release.
 
 The installation ISO images can be downloaded from
-[Debian Ports](http://ftp.debian-ports.org/debian-cd/hurd-i386/current/)
+[Debian Ports](http://ftp.ports.debian.org/debian-ports-cd/hurd-i386/current/)
 in the usual three Debian flavors: NETINST, CD, DVD.  Besides the friendly
 Debian installer, a pre-installed disk image is also available, making it even easier to try
 Debian GNU/Hurd.
