--- a/hurd/debugging/glibc.mdwn
+++ b/hurd/debugging/glibc.mdwn
@@ -35,6 +35,29 @@ There is a list of [[known failures|open_issues/glibc]].
 
 ---
 
+When building the debian glibc, to save yourself a double-compilation, use
+
+    GLIBC_PASSES=libc DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage
+
+To save even more build, stop the build after configure has run, and then you
+can restart the build of only libc.so with:
+
+    cd build-tree/hurd-i386-libc
+    make lib
+
+or of the whole tree with:
+
+    cd build-tree/hurd-i386-libc
+    make
+
+or of just one subdir with for instance:
+
+    make subdir=libpthread -C libpthread ..=../ objdir=$PWD/build-tree/hurd-i386-libc
+
+(note that most subdirs need libc.so built)
+
+---
+
 If you've been doing simple changes to glibc functions that end up in
 `libc.so`, you may test them like this (like for a `strerror_l` implementation
 in this case):
