--- a/hurd/debugging/glibc.mdwn
+++ b/hurd/debugging/glibc.mdwn
@@ -35,9 +35,11 @@ There is a list of [[known failures|open_issues/glibc]].
 
 ---
 
-When building the debian glibc, to save yourself a double-compilation, use
+When building the debian glibc, to save yourself a double-compilation, comment
+in debian/sysdeps/hurd-i386.mk the lines about xen. Then to avoid the whole
+testsuite, use:
 
-    GLIBC_PASSES=libc DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage
+    DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage
 
 To save even more build, stop the build after configure has run, and then you
 can restart the build of only libc.so with:
