trick to build only libc.so

--- a/hurd/debugging/glibc.mdwn
+++ b/hurd/debugging/glibc.mdwn
@@ -42,10 +42,14 @@ testsuite, use:
     DEB_BUILD_OPTIONS=nocheck dpkg-buildpackage
 
 To save even more build, stop the build after configure has run, and then you
-can restart the build of only libc.so with:
+can restart the build of only libc.so and libc.a with:
 
     cd build-tree/hurd-i386-libc
     make lib
+
+or of only libc.so with:
+
+    make objdir=$PWD/build-tree/hurd-i386-libc $PWD/build-tree/hurd-i386-libc/libc.so
 
 or of the whole tree with:
 
