darnassus: apache2, cgit

--- a/community/gsoc/2013/hacklu.mdwn
+++ b/community/gsoc/2013/hacklu.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2013, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -1798,7 +1798,7 @@ In context of [[open_issues/libpthread/t/fix_have_kernel_resources]]:
     <hacklu> please give me any advice on how to use mig to generate stub-files
       in gdbserver? 
     <braunr> hacklu:
-      http://darnassus.sceen.net/gitweb/rbraun/slabinfo.git/blob/HEAD:/Makefile
+      http://darnassus.sceen.net/cgit/rbraun/slabinfo.git/plain/Makefile
     <hacklu> braunr: shouldnt' I work like this
       https://github.com/hacklu/gdbserver/blob/gdbserver/gdb/config/i386/i386gnu.mh
       ?
