--- a/community/gsoc/2013/nlightnfotis.mdwn
+++ b/community/gsoc/2013/nlightnfotis.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2013, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -2366,7 +2366,7 @@ But not the [[open_issues/libpthread_dlopen]] issue?
     <braunr> i'll make a repository on darnassus too
     <braunr> better store it there
     <braunr> nlightnfotis:
-      http://darnassus.sceen.net/gitweb/rbraun/mach_print.git/
+      http://darnassus.sceen.net/cgit/rbraun/mach_print.git/
     <braunr> nlightnfotis: i suggest you implement mach_print with inline asm
       statement in a C file, so that you don't need to alter the build system
       configuration
