--- a/community/gsoc/project_ideas/physical_memory_management.mdwn
+++ b/community/gsoc/project_ideas/physical_memory_management.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2015 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -46,6 +46,6 @@ Useful links :
 
  * <http://git.sceen.net/rbraun/x15.git/>
 
- * <http://git.sceen.net/rbraun/librbraun.git/blob/HEAD:/rdxtree.h>
+ * <https://git.sceen.net/rbraun/librbraun.git/plain/rdxtree.h>
 
 Possible mentors: Richard Braun
