--- a/hurd/translator/mtab/discussion.mdwn
+++ b/hurd/translator/mtab/discussion.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -2153,9 +2153,9 @@ Fixed in 2013-09-28 Hurd commit a81c0c28ea606b0d0a2ad5eeb74071c746b7cdeb
     <teythoon> braunr: where is it?
     <braunr> i'm still building packages to make sure that's it
     <braunr> see
-      http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/blob/HEAD:/libdiskfs/dir-lookup.c
+      https://git.sceen.net/hurd/hurd.git/plain/libdiskfs/dir-lookup.c
     <braunr> which you changed in
-      http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/commit/06d49cdadd9e96361f3fe49b9c940b88bb869284
+      https://git.sceen.net/hurd/hurd.git/commit/?id=06d49cdadd9e96361f3fe49b9c940b88bb869284
     <braunr> line 306 is "return error" instead of "goto out"
     <braunr> has been so since 1994
     <braunr> what is unclear is why this code path is now run
@@ -2238,7 +2238,7 @@ Fixed in 2013-09-28 Hurd commit a81c0c28ea606b0d0a2ad5eeb74071c746b7cdeb
     <teythoon_> braunr: btw, did you fix the leak?
     <braunr> yes
     <braunr>
-      http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/commit/a81c0c28ea606b0d0a2ad5eeb74071c746b7cdeb
+      https://git.sceen.net/hurd/hurd.git/commit/?id=a81c0c28ea606b0d0a2ad5eeb74071c746b7cdeb
     <braunr> 1h after tagging 0.5 (
     <braunr> :(
     <teythoon> ah yes, I've seen that commit
@@ -2880,7 +2880,7 @@ Fixed in 2013-10-05 procfs commit c87688a05a8b49479ee10127470cc60acebead4a?
     <braunr> but i guess that's what you did already
     <braunr> is to only shut the active translator down
     <teythoon>
-      http://git.sceen.net/hurd/hurd.git/commitdiff/0033d20449b3bb558f2ea470983018db39b572aa
+      https://git.sceen.net/hurd/hurd.git/commit/?id=0033d20449b3bb558f2ea470983018db39b572aa
     <teythoon> yeah, i thought about that
     <teythoon> but i believe that is not the right hting to do
     <braunr> yes i know but i'm not sure that's the right approach
