--- a/microkernel/mach/deficiencies.mdwn
+++ b/microkernel/mach/deficiencies.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2012, 2013, 2014 Free Software Foundation,
+[[!meta copyright="Copyright © 2012, 2013, 2014, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -955,7 +955,7 @@ and Rump Kernels*.
     <braunr> that's one goal of the project
     <braunr> you can't achieve performance and scalability without the
       appropriate techniques
-    <braunr> see http://git.sceen.net/rbraun/librbraun.git/blob/HEAD:/rdxtree.c
+    <braunr> see https://git.sceen.net/rbraun/librbraun.git/plain/rdxtree.c
       for the existing userspace implementation
     <arnuld> in kern/work.c I see one TODO "allocate numeric IDs to better
       identify worker threads"
@@ -2396,7 +2396,7 @@ and Rump Kernels*.
 
 ## IRC, freenode, #hurd, 2013-09-28
 
-    <rah> braunr: http://git.sceen.net/rbraun/x15.git/blob/HEAD:/README
+    <rah> braunr: https://git.sceen.net/rbraun/x15.git/plain/README
     <rah> "X15 is a free microkernel."
     <rah> braunr: what distinguishes it from existing microkernels?
 
