--- a/microkernel/mach/gnumach/projects/clean_up_the_code.mdwn
+++ b/microkernel/mach/gnumach/projects/clean_up_the_code.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2005, 2006, 2007, 2008, 2010, 2012, 2013, 2014
-Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2005, 2006, 2007, 2008, 2010, 2012, 2013, 2014,
+2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -167,7 +167,7 @@ further files (also exported ones) that serve no real value, but are being
     <teythoon> and fix kmem_cache_error to use kmem_warn near the top of the
       function
     <braunr> teythoon: i suggest you use the x15 variant as a reference
-      (http://git.sceen.net/rbraun/x15.git/blob/HEAD:/kern/kmem.c)
+      (https://git.sceen.net/rbraun/x15.git/plain/kern/kmem.c)
     <teythoon> right
 
 
