--- a/news/2013-09-27.mdwn
+++ b/news/2013-09-27.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2013, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -32,15 +32,6 @@ than the [GNU project's 30th birthday](http://www.gnu.org/gnu30/)?
   * **GNU MIG 1.4**: [[!message-id desc=announcement
     "877ge20vzt.fsf@kepler.schwinge.homeip.net"]],
     [NEWS](http://git.savannah.gnu.org/cgit/hurd/mig.git/tree/NEWS?id=v1.4)
-
-(If the NEWS links [[!GNU_Savannah_support desc="don't work" 108401]], try the
-following ones -- which are served from a GNU/Hurd machine, by the way: [GNU
-Hurd 0.5
-NEWS](http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/blob/v0.5:/NEWS),
-[GNU Mach 1.4
-NEWS](http://darnassus.sceen.net/gitweb/savannah_mirror/gnumach.git/blob/v1.4:/NEWS),
-[GNU MIG 1.4
-NEWS](http://darnassus.sceen.net/gitweb/savannah_mirror/mig.git/blob/v1.4:/NEWS).)
 
 These new releases bundle bug fixes and enhancements done since the
 last releases more than a decade ago; really too many (both years and
