--- a/open_issues/anatomy_of_a_hurd_system.mdwn
+++ b/open_issues/anatomy_of_a_hurd_system.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2012, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2011, 2012, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -844,7 +844,7 @@ Actually, the Hurd has never used an M:N model. Both libthreads (cthreads) and l
     <giuscri> braunr: uhm ...some example?
     <braunr> see processes for example
     <braunr> see
-      http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/tree/HEAD:/hurd
+      https://git.sceen.net/hurd/hurd.git/tree/hurd
     <braunr> this is the collection of interfaces the hurd provides
     <braunr> most of them map to unix calls, because gnu aims at posix
       compatibility too
@@ -1321,7 +1321,7 @@ Actually, the Hurd has never used an M:N model. Both libthreads (cthreads) and l
     <hurdmaster> can I get 'hello world' on pure mach?
     <teythoon> you could
     <teythoon> hurdmaster: actually, here it is:
-      http://darnassus.sceen.net/gitweb/rbraun/mach_print.git/
+      http://darnassus.sceen.net/cgit/rbraun/mach_print.git/
     <teythoon> compile it statically, put it somewhere in /boot
     <teythoon> make sure you're running a debug kernel
     <teythoon> load it from grub instead of /hurd/ext2fs.static
