--- a/open_issues/git-core-2.mdwn
+++ b/open_issues/git-core-2.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2013 Free Software
+[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2013, 2016 Free Software
 Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -115,25 +115,7 @@ Still seen.
     <sea`> fatal: index-pack failed
     <braunr> not intereseting enough unfortunately
     <braunr> but it might come from savannah too
-    <braunr> try the mirrors at
-      http://darnassus.sceen.net/gitweb/?a=project_list;pf=savannah_mirror
-    <sea`> Let's see..if I try: 'git clone
-      git://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git', I get:
-      'fatal: remote error: access denied or repository not exported:
-      /gitweb/savannah_mirror/hurd.git'
-    <braunr> my bad
-    <braunr> that's weird, it should work ..
-    <braunr> oh, stupid translation error
-    <sea`> translation? From one human language to another?
-    <braunr> not translation actually
-    <braunr> typo :)
-    <braunr> it's either
-    <braunr> git://darnassus.sceen.net/savannah_mirror/hurd.git
-    <braunr> or
-    <braunr> http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git
-    <braunr> copy paste the url exactly please
-    <braunr> /gitweb/ is only present in the http url
-    <sea`> Ah, right. Okay, I'll paste it exactly
+
     <sea`> Ehm. The whole thing locked up badly. I'll reboot it and try again.
     <braunr> are you sure it locked oO ?
     <braunr> the hurd can easily become unresponsive when performing io
