--- a/open_issues/glibc.mdwn
+++ b/open_issues/glibc.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2010, 2011, 2012, 2013, 2014, 2015
-Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2010, 2011, 2012, 2013, 2014, 2015,
+2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -378,10 +378,10 @@ Last reviewed up to the [[Git mirror's 9a869d822025be8e43b78234997b10bf0cf9d859
             <braunr> both select and poll are implemented on top of the hurd io
               select call (which isn't exactly select)
             <braunr>
-              http://darnassus.sceen.net/gitweb/savannah_mirror/hurd.git/blob/HEAD:/hurd/io.defs
+              http://git.sceen.net/hurd/hurd.git/plain/hurd/io.defs
             <braunr> this is the io interface
             <braunr>
-              http://darnassus.sceen.net/gitweb/savannah_mirror/glibc.git/blob/refs/heads/tschwinge/Roger_Whittaker:/hurd/hurdselect.c
+              http://git.sceen.net/hurd/glibc.git/tree/hurd/hurdselect.c?h=tschwinge/Roger_Whittaker
             <braunr> this is the client side implementation
 
         IRC, freenode, #hurd, 2014-02-14:
