--- a/open_issues/rework_gnumach_ipc_spaces.mdwn
+++ b/open_issues/rework_gnumach_ipc_spaces.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2011, 2013, 2016 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -559,7 +560,7 @@ There is a [[!FF_project 268]][[!tag bounty]] on this task.
 # IRC, freenode, #hurd, 2011-06-27
 
     < braunr> ok, here is the radix tree code:
-      http://git.sceen.net/rbraun/libbraunr.git/
+      https://git.sceen.net/rbraun/librbraun.git/
     < braunr> the preloading stuff will be added in the kernel only, as it's
       really pointless and not easily doable in userspace
     < youpi> preloading?
