--- a/open_issues/systemd.mdwn
+++ b/open_issues/systemd.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2010, 2011, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2010, 2011, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -2587,7 +2587,7 @@ note the additional [[upstart]] page.
     <gnu_srs> Ah, you did?
     <teythoon> gnu_srs: yes, in debian/patches/exec_filename_fix.patch
     <teythoon>
-      http://darnassus.sceen.net/gitweb/teythoon/packaging/hurd.git/commitdiff/6da3e0be8fde0594bd84a13536d9d93048186790
+      http://darnassus.sceen.net/cgit/teythoon/packaging/hurd.git/commit/?id=6da3e0be8fde0594bd84a13536d9d93048186790
     * teythoon . o O (diffs of diffs are trippy :)
 
 
