--- a/open_issues/time.mdwn
+++ b/open_issues/time.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2009, 2011, 2013 Free Software Foundation,
+[[!meta copyright="Copyright © 2009, 2011, 2013, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -276,7 +276,7 @@ not get a define for `HZ`, which is then defined with a fallback value of 60.
     < nalaginrut> well, I can't say works fine, the proper description is "now
       it has reasonable result"
     < braunr> youpi: could you bring
-      http://darnassus.sceen.net/gitweb/savannah_mirror/glibc.git/commit/90404d6d1aa01f6ce1557841f5a675bb6a30f508
+      http://git.sceen.net/hurd/glibc.git/commit/?id=90404d6d1aa01f6ce1557841f5a675bb6a30f508
       into debian glibc btw ?
     < nalaginrut> braunr:  it failed the test since the clock run too fast, but
       it should be smaller than 2*clk-per-sec
