--- a/public_hurd_boxen/installation/darnassus.mdwn
+++ b/public_hurd_boxen/installation/darnassus.mdwn
@@ -14,10 +14,9 @@ License|/fdl]]."]]"""]]
 
 # Packages
 
-  * sthttpd (thttpd)
+  * apache2
 
     Installation done by Richard.
-    [[!message-id "20151122000109.GA8492@shattrath"]].
 
   * ikiwiki
 
@@ -57,11 +56,13 @@ License|/fdl]]."]]"""]]
     actually occur.  Nothing in the apache logs.  Not fixed by the update to
     ikiwiki 3.20140227.
 
-  * gitweb
+  * cgit
 
     So one can view diffs of the wiki pages, etc.
 
         $ sudo ln -s ~hurd-web/hurd-web.git /var/lib/git/
+
+    <http://darnassus.sceen.net/cgit/hurd-web.git/>.
 
   * git-daemon-sysvinit
 
@@ -93,7 +94,7 @@ May want to clean up `~hurd-web/public_html.workspace/.ikiwiki/` before that.
 
 As a user with appropriate permissions, then install the CGI file:
 
-    § sudo mv ~hurd-web/public_html.workspace.cgi /var/www/html/hurd-web.cgi
+    § sudo mv ~hurd-web/public_html.workspace.cgi /usr/lib/cgi-bin/hurd-web
 
 
 # `~tschwinge/`
