--- a/source_repositories.mdwn
+++ b/source_repositories.mdwn
@@ -36,7 +36,7 @@ This page is meant to give some guidelines.  Please use good sense or ask on
   * hurd/web.git -- [[contributing/Web_pages]]
 
 These are mirrored on
-<http://darnassus.sceen.net/gitweb/?a=project_list;pf=savannah_mirror>, which
+<https://git.sceen.net/hurd/>, which
 may provide faster anonymous accesses.
 
 
@@ -231,9 +231,9 @@ branches, like an imaginary
 can publish Git repositories by creating in `/var/lib/git/` symlinks to
 repositories residing in their home directories.  (Due to disk space
 constraints, do not put repositories directly into `/var/lib/git/`.)  All
-repositories in `/var/lib/git/` are automatically exported.  A gitweb interface
+repositories in `/var/lib/git/` are automatically exported.  A web interface
 (that also lists URLs for accessing the repositories using the `git` and `http`
-protocols) is available at <http://darnassus.sceen.net/gitweb/>.
+protocols) is available at <http://darnassus.sceen.net/cgit/>.
 
 
 
