--- a/contributing/web_pages.mdwn
+++ b/contributing/web_pages.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015
-Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2013, 2014, 2015,
+2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -128,17 +128,22 @@ SSH configuration as advised on that page.)  If you have an account on there:
     $ git clone darnassus:~hurd-web/hurd-web.git [dest]
 
 If you don't have such an account or don't have your login data handy, you can
-still get pages the read-only way.
+still get pages the read-only way, see the *Clone* URLs given on
+<http://darnassus.sceen.net/cgit/hurd-web.git>:
 
-<!--
+    $ git clone git://darnassus.sceen.net/hurd-web.git [dest]
 
-    $ git clone git://darnassus.sceen.net/~hurd-web/hurd-web.git [dest]
+..., or:
+
+    $ git clone http://darnassus.sceen.net/cgit/hurd-web.git [dest]
 
 Or, you can check out the Savannah repository:
 
--->
-
     $ git clone git://git.savannah.gnu.org/hurd/web.git [dest]
+
+..., or:
+
+    $ git clone http://git.savannah.gnu.org/cgit/hurd/web.git [dest]
 
 See <http://git.savannah.gnu.org/cgit/hurd/web.git>.  If you're using the `ssh`
 protocol, and you're a member of the Hurd's [[rules/Savannah_group]], you can
