--- a/open_issues/gnumach_memory_management.mdwn
+++ b/open_issues/gnumach_memory_management.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2012, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2011, 2012, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -1952,7 +1952,7 @@ There is a [[!FF_project 266]][[!tag bounty]] on this task.
 # IRC, freenode, #hurd, 2011-11-16
 
     <braunr> for those who want to play with the slab branch of gnumach, the
-      slabinfo tool is available at http://git.sceen.net/rbraun/slabinfo.git/
+      slabinfo tool is available at http://darnassus.sceen.net/cgit/rbraun/slabinfo.git/
     <braunr> for those merely interested in numbers, here is the output of
       slabinfo, for a hurd running in kvm with 512 MiB of RAM, an unused swap,
       and a short usage history (gnumach debian packages built, aptitude
