Add more hardcore debugging hints

--- a/hurd/debugging.mdwn
+++ b/hurd/debugging.mdwn
@@ -26,6 +26,7 @@ License|/fdl]]."]]"""]]
   * [[glibc]]
   * [[translator]]s
   * [[trap_in_the_kernel]]
+  * [[hardware_watchpoint]]
 
 
 # IRC, freenode, #hurd, 2013-06-30
